# ethberlin-schufher

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.artifacts/: environment.txt  main.parameters.txt  main.txt  requirements.txt  traceback.txt
backend/ethberlin_schufher_flask/: app.py
backend/ethberlin_schufher_flask/api/v1/: endpoints.py
backend/ethberlin_schufher_flask/utils/: example.py
backend/src/: app.py
backend/src/api/v1/: endpoints.py  score.ipynb
backend/src/utils/: banks.py  institutions.py  logger.py  ml.py
ethberlin-schufher-flask/: .gitignore  Dockerfile
ethberlin-schufher-vue/: README.md
ethberlin-schufher-vue/src/assets/: base.css
ethberlin-schufher-vue/src/assets/fonts/: fonts.css
ethberlin-schufher-vue/src/components/: Auth.vue  Footer.vue  Header.vue
ethberlin-schufher-vue/src/plugins/: vuetify.js
ethberlin-schufher-vue/src/views/: NotFound.vue
frontend/schufher/: README.md  package-lock.json  package.json
frontend/schufher/src/: main.js
frontend/schufher/src/assets/: base.css
frontend/schufher/src/components/: Footer.vue  Header.vue
frontend/schufher/src/router/: index.js
vue/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
vue/src/: App.vue  main.js
vue/src/assets/: base.css
vue/src/components/: Header.vue  HeaderLoggedIn.vue  LoginForm.vue  ScoreBar.vue
vue/src/router/: index.js
vue/src/store/: index.js
vue/src/views/: Application.vue  Home.vue  LoginPage.vue  ProfilePage.vue  Results.vue  UserPage.vue
(+2 files in other folders)
