[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of SchuFHEr"
authors = ["Alexander Semenov <alexander.semenov@tum.de>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pytest = "^7.4.0"
gunicorn = "^20.1.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
flask-rq2 = "^18.3"
flask-jwt-extended = "^4.6.0"

[tool.pytest.ini_options]
minversion = "7.4.0"
pythonpath = ["backend"]
testpaths = ["tests"]
console_output_style =  "progress"
addopts = """\
    -rA \
    -q \
    --cache-clear \
    --disable-pytest-warnings \
    --no-header \
    --show-capture=no 
    """


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
